--- a/index.html
+++ b/index.html
@@ -244,5 +244,7 @@ h5, .h5 {
 				target="_blank">Dan.com</a> 。</p>
 	</div>
 </div>
+<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+<script>LA.init({id:"JvqH5Y6NAjbktlON",ck:"JvqH5Y6NAjbktlON"})</script>
 </body>
 </html>
