--- a/index.html
+++ b/index.html
@@ -1,250 +1,175 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Suli.Group - This domain name has been registered</title>
-	<style type="text/css">
-body {
-	font-size: 14px;
-	font-family: Arial, Helvetica, sans-serif;
-	font-weight: normal;
-	color: #777;
-	margin: 0;
-	padding: 0;
-	background: #eee;
-}
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SuLi.Group</title>
+  <script>
+    (function (args) {
+      var wait = [],
+        isReady = false,
+        d = document,
+        w = window,
+        isMobile = args.isMobile
 
-.container {
-	max-width: 1020px;
-}
+      function handler(e) {
+        if (isReady) {
+          return
+        }
 
+        if (e.type === 'onreadystatechange' && d.readyState !== 'complete') {
+          return
+        }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6 {
-	font-family: Arial, Helvetica, sans-serif;
-	font-weight: bold;
-}
+        for (var i = 0; i < wait.length; i++) {
+          wait[i].call(d)
+        }
+        isReady = true
+        wait = null
+      }
 
-h1, .h1 {
-	font-size: 2.5em;
-}
-h2, .h2 {
-	font-size: 2em;
-}
-h3, .h3 {
-	font-size: 1.75em;
-}
-h4, .h4 {
-	font-size: 1.5em;
-}
-h5, .h5 {
-	font-size: 1.25em;
-}
-.blue {
-	color: #0000FF;
-}
-.red {
-	color: #f00;
-}
-.green {
-	color: #060;
-}
-.black {
-	color: #000;
-}
-.gray {
-	color: #777;
-}
-.white {
-	color: #fff;
-}
-.yellow {
-	color: yellow;
-}
-.bgBlack {
-	background: #000;
-}
+      if (d.addEventListener) {
+        d.addEventListener('DOMContentLoaded', handler, false)
+        d.addEventListener('readystatechange', handler, false) //IE9+
+        w.addEventListener('load', handler, false)
+      } else if (d.attachEvent) {
+        d.attachEvent('onreadystatechange', handler)
+        w.attachEvent('onload', handler)
+      }
 
-.center {
-	text-align: center;
-}
-.right {
-	text-align: right;
-}
-.left {
-	text-align: left;
-}
+      function ready(fn) {
+        if (isReady) {
+          fn.call(document)
+        } else {
+          wait.push(fn)
+        }
+      }
 
-.hd {
-	text-align: center;
-}
-.hd .desc {
-	color: #666600;
-}
+      function rem() {
+        // 基准字号
+        if (args.fontSize) {
+          d.body.style.fontSize = args.fontSize
+        }
 
-.bd {
-  width: 96%;
-	max-width: 750px;
-	margin: 0 auto;
-}
+        var docE = d.documentElement
+        var maxWidth = args.maxWidth // 最大宽
+        var minH = docE.style.minHeight
+        docE.style.minHeight = '80vh'
+        var BCR = docE.getBoundingClientRect()
+        var innerWidth = BCR.width || window.innerWidth
+        var innerHeight = BCR.height || window.innerHeight
+        var bW = isMobile
+          ? innerWidth
+          : innerWidth > 0 && innerWidth < innerHeight
+            ? Math.min(innerWidth, maxWidth)
+            : Math.min(innerWidth, maxWidth)
+        var width = Math.min(bW, maxWidth)
+        docE.style.minHeight = minH
+        docE.style.fontSize = width / 7.5 + 'px'
+      }
 
-.ft {
-	text-align: center;
-	color: #ccc;
-}
+      if (args.maxWidth > 320) {
+        w.addEventListener('resize', rem)
+        try {
+          rem()
+        } catch (e) { }
+        ready(rem)
+      }
 
-.ft a,
-.ft a:visited {
-	color: #00f;
-}
+      d.ready = ready
+    })({
+      maxWidth: +'560',
+      fontSize: '14px'
+    })
+  </script>
+  <style>
+    html,
+    body {
+      height: 100%;
+      padding: 0;
+      margin: 0;
+    }
 
-.p5 {
-	padding: .5em;
-}
-.p10 {
-	padding: 1em;
-}
-.m5 {
-	margin: .5em;
-}
-.m10 {
-	margin: 1em;
-}
+    body {
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-image: linear-gradient(to top, #00c6fb 0%, #005bea 100%);
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+    }
 
-.mod {
-    overflow: hidden;
-    margin-bottom: 30px;
-    padding: 0;
-    border: 1px solid #eaeaea;
-    border-radius: 0;
-    background: #fdfdfd;
-    -webkit-box-shadow: 0px 1px 0px 0px #adadad;
-    box-shadow: 0px 1px 0px 0px #adadad;
-}
-.modHd {
-	color: #fff;
-	font-weight: 100;
-	font-size: 1.3em;
-	text-shadow: none;
-	margin: 0;
-	padding: 5px 10px 5px 23px;
-	background: #b6b6b6;
-	box-shadow: none;
-	/* border-radius: 0;
-	border: none; */
-}
-.modBd {
-	padding: 1em;
-}
-	</style>
+    h1,
+    h2 {
+      line-height: 1.5;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+
+    h1 a,
+    h2 a {
+      text-decoration: none;
+    }
+
+    h1 {
+      font-size: 1rem;
+    }
+
+    h2 {
+      font-size: 0.6rem;
+    }
+
+    .dn {
+      color: #ebdf07;
+    }
+
+    .tld {
+      color: #f8b409;
+    }
+
+    a,
+    a:visited {
+      color: #07eb12;
+      text-underline-offset: .16rem;
+    }
+
+    .mod {
+      width: 7.5rem;
+      padding: .2rem 0;
+      text-align: left;
+      font-size: .5rem;
+    }
+    .mod + .mod {
+      border-top: 1px dotted #6e45e2;
+    }
+
+    .mod p {
+      margin: 0;
+      padding: .1rem .2rem;
+    }
+  </style>
 </head>
 
 <body>
-<div class="hd">
-	<h2 class="black">THIS DOMAIN HAS BEEN REGISTERED</h2>
-	<p class="desc">塑力、速力、苏立、苏利 ...</p>
-</div>
-
-<div class="bd">
-	<div class="mod">
-		<div class="modBd">
-			<p><span class="h1 blue">Suli.Group</span> 私人注册所有，积极为未来运营而规划，不确保出售可能与否。</p>
-			<p>Registered and Owned by an individual and being actively planned for future web operation.</p>
-			<p><a class="gray"
-				href="mailto:sinobrands@qq.com">
-				Click here to contact the Attn. for business cooperation. <span class="red">sinobrands@qq.com</span>
-				</b>
-			</a>
-			<p><a href="https://cnlei.com/d/go?p=ali&amp;d=Suli.Group" target="blank"><b class="green">这就是未來，具有全球唯一性的最重要互联网的数字资产!</b></a></p>
-		</div>
-	</div>
-
-	<div class="mod">
-		<div class="modHd">内部功能 / Internal Function</div>
-		<div class="modBd">
-			<p>&gt;&gt; <a href="https://cnlei.com/d/login?m=email&amp;d=Suli.Group" target="blank">Webmail</a></p>
-			<p>&gt;&gt; <a href="https://cnlei.com/d/login?m=preview&amp;d=Suli.Group" target="blank">Beta Preview</a></p>
-			<p>&gt;&gt; <a href="https://cnlei.com/d/login?m=admin&amp;d=Suli.Group" target="blank">Domain Admin</a></p>
-			<p>&gt;&gt; <span>域名永续,&nbsp;永不过期</span>
-			</p>
-			<p>&gt;&gt; Domains Are Forever</p>
-			<p>&gt;&gt; <span>获推荐域名担保交易平台：<a href="https://cnlei.com/d/go?p=ali&amp;d=Suli.Group" target="blank">aliyun.com</a>、<a
-				href="https://cnlei.com/d/go?p=dan&amp;d=Suli.Group" target="blank">Dan.com</a> ...</span></p>
-			</div>
-		</div>
-
-		<div class="mod">
-			<div class="modBd">
-				<h2 class="center">免责声明</h2>
-				<p>此域名为通用词汇，并为非商业性、独立的私人且个人所有，可能将有多名合伙人共同经营，与任何众所周知的公司、组织、商标无关。</p>
-			  <p>本页面仅为域名持有人解析管理域名以备未来之项目，这里从不提供/售卖任何商品或服务。</p>
-			  <p>如果您认为您不期而至，建议您重新核对或借助搜索引擎。</p>
-			  <p>进度更新：Email已使用，网站尚内部测试中，无法对外服务。请稍后访问，以获得可能的更新
-				</p>
-			</div>
-		</div>
-
-		<div class="mod">
-			<div class="modBd">
-				<h2 class="center">Disclaimer</h2>
-				<p>It is a general-term, non-commercial and private & personal domain, not connected or affiliated with
-					any company, organization or trademark.</p>
-				<p>It does not offer/sell any commodities or services.</p>
-				<p>If you think your arrival is unexpected, please recheck or use search engines.</p>
-				<p>Email service is set up, while web service is for internal test only.</p>
-				<p>Please come back later, for any possible update.</p>
-			</div>
-		</div>
-
-		<div class="mod">
-			<div class="modBd">
-				<p>* 并非每个所陈列/链接至此的域名/网站都会考虑你的合作或收购意向</p>
-				<p>* 小心不良“中介”，侵损你的利益</p>
-				<div class="bgBlack p5">
-					<h3>&nbsp;&nbsp;祝福:</h3>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;中国平安 (A:601318) (H:02318)</p>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;仁和药业 (A:000650)</p>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;凯撒旅游 (A:000796)</p>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;360良医</p>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;易宝支付</p>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;红云集团</p>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;... &nbsp;... &nbsp; ... </p>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;等数百个收购方企业</p>
-				</div>
-			</div>
-		</div>
-</div>
-
-<div class="ft">
-	<div class="bgBlack p10">
-		<p class="yellow">我想购买这个域名，我需要了解什么？</p>
-		<p>
-			DNJournal.com是一个理解域名价值的好地方，它发布<a href="http://dnjournal.com/domainsales.htm"
-					target="_blank" rel="noopener noreferrer">每周 <i class="fad fa-external-link-alt"></i></a> 以及<a
-					href="http://dnjournal.com/ytd-sales-charts.htm" target="_blank" rel="noopener noreferrer">年度 <i
-						class="fad fa-external-link-alt"></i></a> 域名成交价格，您还可以浏览<a
-					href="http://dnjournal.com/archive/domainsales-archive.htm" target="_blank"
-					rel="noopener noreferrer">往年的成交历史 <i class="fad fa-external-link-alt"></i></a> ，这有助于理解域名市场的概况。
-		</p>
-		<p>域名交易多数只需要数分钟，而且关键在你。</p>
-		<p>由<a href="https://cnlei.com/d/go?p=ali&amp;d=Suli.Group" target="_blank">Aliyun.com <i class="fad fa-external-link-alt"></i></a>
-			担保，多数情况下可以在你付款确认后数分钟完成。如果你可以外币支付，我们也接受国际担保，如：<a href="https://cnlei.com/d/go?p=dan&amp;d=Suli.Group"
-				target="_blank">Dan.com</a> 。</p>
-	</div>
-</div>
-<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
-<script>LA.init({id:"JvqH5Y6NAjbktlON",ck:"JvqH5Y6NAjbktlON"})</script>
+  <div class="mod">
+    <h1><a href="https://cnlei.com/d/go?p=ali&d=suli.group"><strong class="dn">SuLi</strong>.<strong class="tld">Group</strong></a></h1>
+    <h2><a href="https://cnlei.com/d/go?p=ali&d=suli.group">苏利、苏力、塑力、速力</a></h2>
+  </div>
+  <div class="mod">
+    <p><strong class="tld">.group</strong>
+      是<strong class="dn">集团企业</strong>专属的通用顶级域名，打造集团品牌，提高用户粘度和可信度。</p>
+  </div>
+  <div class="mod">
+    <p>trade: <a href="https://cnlei.com/d/go?p=ali&d=suli.group">AliYun</a></p>
+    <p>email: <a href="mailto:sinobrands@qq.com">sinobrands@qq.com</a></p>
+  </div>
+  <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+  <script>LA.init({id:"JvqH5Y6NAjbktlON",ck:"JvqH5Y6NAjbktlON"})</script>
 </body>
+
 </html>
